fix custom accent colour picker whitespace

--- a/themes/bdev/assets/sass/components/_picker.scss
+++ b/themes/bdev/assets/sass/components/_picker.scss
@@ -120,6 +120,8 @@
         left: 12.5px;
       }
       input[type='color'] {
+        padding: 0;
+
         &::-webkit-color-swatch-wrapper {
           padding: 0;
         }
